ylio/static/css/ylio.css
body {
    margin: 0;
    padding: 0;
    font-family: 'Open Sans', sans-serif;
    color: #434343;
}

.container {
    height: 100%;
}

form {
    text-align: center;
    position: relative;
    top: 40%;
}

input[name=url] {
    color: #434343;
    font-size: 2em;
    border: 1px solid #ccc;
    padding: 15px;
}

input[name=url]:focus {
    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

#colour {
    border: 1px solid #ccc;
    position: absolute;
    bottom: 10px;
    left: 10px;
    height: 50px;
    width: 50px;
}

